--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha ./spec",
     "dev": "webpack-dev-server",
-    "compile": "webpack",
+    "compile": "webpack --progress -p",
     "lint": "eslint ./",
     "precommit": "npm run lint"
   },
@@ -30,6 +30,8 @@
     "file-loader": "^0.11.1",
     "mocha": "^3.2.0",
     "style-loader": "^0.16.1",
+    "uglify-js": "^2.8.22",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
